# ZTicTacToe

./: .gitignore  .readthedocs.yml  LICENCE.txt  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.rst
docs/src/: examples.rst  modules.rst  zttt.rst
examples/: pvc_cli.py  pvp_cli.py  pvp_random_moves.py
src/ZTTT/: PvC.py  PvP.py  __init__.py
src/ZTTT/ZTBase/: ZTBaseBoard.py  ZTBaseEngine.py  __init__.py
src/ZTTT/ZTEngines/: ZTEngineFirst.py  ZTPlayerFirst.py  __init__.py
src/ZTTT/ZTErrors/: ZTErrors.py  __init__.py
tests/: __init__.py  basic_tests.py  setup.py  test.py
zttt/: __init__.py  pvc.py  pvp.py  zt_errors.py
zttt/_zt_core/: __init__.py  zt_base_board.py  zt_base_engine.py  zt_engine_first.py  zt_player_first.py
