[metadata]
name = ZTTT
version = 0.1.0
author = Sumanth NR
author_email = sumanthnr62@gmail.com
description = A Tic Tac Toe Library with a near perfect engine
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown

url = https://github.com/Sigma1084/ZTicTacToe
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3

[options.packages.find]
where = src
